Fix Pico CSS style tooltips from being cut off on articles (#818)
As per title.

Fix Pico CSS style tooltips from being cut off on articles.

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/818
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -700,7 +700,8 @@ article .e-content blockquote {
 .container .h-entry,
 .h-feed>div .h-entry {
   margin: 1rem 0;
-  padding: 0.75rem 0.75rem 0.5rem 0.75rem;
+  padding: 0.75rem 0.75rem 1rem 0.75rem;
+  overflow: visible;
 }
 
 .h-feed article:first-child {
